--- a/app/assets/stylesheets/styles/navbar.scss
+++ b/app/assets/stylesheets/styles/navbar.scss
@@ -2,7 +2,7 @@
 
 nav#main-nav {
   z-index: 16001;
-  background-image: image-url('backgrounds/dark_Tire.png');
+  background-image: image-url('bg-dark_Tire.png');
   margin-bottom: 0px;
   border: 0;
   position: fixed;
