add paperclip posters saving to S3

--- a/app/views/welcome/_poster.html.erb
+++ b/app/views/welcome/_poster.html.erb
@@ -23,11 +23,7 @@
     </div>
 
     <a href="#">
-     <% if (film.poster_url == "NA") %>
-     <%= image_tag "default", class: "poster" %>
-     <% else %>
-     <%= image_tag "poster-#{film.id}", class: "poster" %>
-     <% end %>
+      <%= image_tag film.poster.url, class:"poster" %>
    </a>
 
  </div>
