fix paperclip S3 image handling

--- a/app/views/welcome/_poster.html.erb
+++ b/app/views/welcome/_poster.html.erb
@@ -23,8 +23,8 @@
     </div>
 
     <a href="#">
-      <%= image_tag film.poster.url, class:"poster" %>
-   </a>
+      <%= image_tag film.poster.url %>
+    </a>
 
  </div>
 </div>
