--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -9,6 +9,11 @@ $quinary-color: ;
 $senary-color: ;
 $septenary-color: ;*/
 
+.modal {
+  overflow-y: auto;
+}
+
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -60,3 +65,22 @@ button:focus { outline:0 !important; }
 input:focus { outline:0 !important;}
 
 
+
+
+/* browser scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.3);
+    -webkit-border-radius: 1px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  height: 50px;
+  background: $secondary-color;
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(255,0,0,0.4);
+}
