--- a/app/assets/stylesheets/styles/calendar.scss
+++ b/app/assets/stylesheets/styles/calendar.scss
@@ -10,7 +10,6 @@
 table.calendar-table {
   background-color: white;
   margin-bottom: 0;
-
 }
 
 td.date-box div.film-listing-container:first-of-type{
@@ -43,10 +42,16 @@ div.film-listing-container {
   }
 }
 
+div.month-header-container{
+  padding-bottom: 10px;
+  margin-left: 15px;
+}
+
 span.month-header {
   font-size: 2.5rem;
   font-weight: 600;
 }
+
 span.date {
   float: right;
 }
