--- a/app/assets/stylesheets/styles/theaternav.scss
+++ b/app/assets/stylesheets/styles/theaternav.scss
@@ -2,6 +2,7 @@
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 20px;
+
 }
 
 div.user-cal-container { padding: 0;}
@@ -56,6 +57,8 @@ button#theaters-dropdown-button {
   padding: 6px 10px;
   background-color: $primary-color;
   border: 1px solid $secondary-color;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 
   span {
     color: $secondary-color;
