--- a/app/views/welcome/_calendar.html.erb
+++ b/app/views/welcome/_calendar.html.erb
@@ -3,7 +3,7 @@
 <% @date_filler = set_start_date(@date_filler) %>
 <div class="calendar-container">
   <div class="">
-    <div class="">
+    <div class="month-header-container">
       <span class="month-header">
         <%= Date::MONTHNAMES[@date_filler.month] %>
       </span>
