--- a/app/views/welcome/_theaters_nav.html.erb
+++ b/app/views/welcome/_theaters_nav.html.erb
@@ -6,7 +6,7 @@
   </button>
 
   <% if current_user %>
-  <%= button_to "#{current_user.username}'s watchlist", current_user, class: "user-cal btn btn-success center col-xs-6 col-sm-12", id: "user-cal",method: 'get', :remote => true %>
+  <%= button_to "my watchlist", current_user, class: "user-cal btn btn-success center col-xs-6 col-sm-12", id: "user-cal",method: 'get', :remote => true %>
   <% else %>
   <button id="user-cal" data-toggle="modal" data-target="#login-modal" class="user-cal btn btn-warning col-xs-6 col-sm-12">
     Your Watchlist
