--- a/app/assets/stylesheets/styles/buzzbox.scss
+++ b/app/assets/stylesheets/styles/buzzbox.scss
@@ -92,7 +92,7 @@ div#myCarousel {
       width: 100%;
       height: 100%;
       position:absolute;
-      /*display: none;*/
+      display: none;
       background:rgba(0, 0, 0, 0.5);
       text-align:center;
       color:#fff !important;
@@ -117,7 +117,7 @@ div#myCarousel {
     transform: scale(1.3, 1.3);
     transition: all 0.5s ease-in-out;
 
-    box-shadow: -10px -10px 5px yellow;
+    box-shadow: -4px -4px 2px yellow;
 
     .caption {
       display: block;
