--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -37,19 +37,16 @@ div.body-container { background-color: #F5F5F5; }
 }
 
 /*'Poiret One'*/
-h1 { font-family: 'Futura', courier !important; }
+h1 { font-family: 'Poiret One'; }
 
 h2, h3, h4, h5, h6, th, td, span.theater-name, span.theater-tab, li, a, div.panel-heading {
   font-family: 'Futura', courier !important;
   font-weight: 800;
 }
-p, div, span.showtime {
+p, div, input, span.showtime {
   font-family: 'Futura', courier !important;
 }
 
-input {
-  font-family: 'Futura', courier !important;;
-}
 
 .body-container { background-color: white; }
 
